style.css
/* ... */
@media (max-width: 1000px) {
  .hero-text {
    max-width: 80%;
  }
}
@media (max-width: 768px) {
  .hero-text {
    max-width: 80%;
    margin-top: 15%;
    left: 2rem;
  }
}

.hero-text h1 {
  font-weight: 700;
  font-size: 3rem;
}

@media (max-width: 768px) {
  .hero-text h1 {
    font-size: 2.5rem;
  }
}

.hero-text p {
  margin-top: 0.8rem;
  font-size: 1.3rem;
}

@media (max-width: 768px) {
  .hero-text p {
    font-size: 1rem;
  }
}

.cta-button {
  display: inline-block;
  margin-top: 1.5rem;
  padding: 1rem 1.5rem;
  background-color: #ffae00;
  border: white solid 0.1rem;
  color: white;
  border-radius: 5px;
  font-weight: 500;
}
.cta-button:hover {
  background-color: #ffc23d;
}

.image-boxes {
  display: flex;
  justify-content: space-around;
  margin: 2rem 0;
}
@media (max-width: 768px) {
  .image-boxes {
    display: flex;
    flex-direction: column;
  }
}

.image-boxes .box {
  background-color: #fff;
  padding: 1rem;
  box-shadow: 0px 0.4rem 0.6rem rgba(0, 0, 0, 0.1);
}

.image-boxes .box img {
  width: 100%;
  max-width: 28rem;
  height: auto;
}

.image-boxes .box p {
  padding-top: 1rem;
}

/*INFO CONFIGURATION*/
.info1 {
  padding: 5rem 2rem;
  text-align: center;
  background-color: #f4f4f4;
  border-radius: 5px;
}
@media (max-width: 768px) {
  .info1 {
    width: 100%;
    max-width: 80rem;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}
.info-text1 p{
  width: 100%;
}



.info1 h2 {
  font-size: 2rem;
  font-weight: 600;
}

.info1 p {
  margin-top: 1rem;
  font-size: 1.4rem;
  color: #666;
  max-width: 50%;
  margin: 2rem auto;
}

/* INFO - OTHER PAGES */
.info {
  padding: 3rem 1rem;
  text-align: center;
  background-color: #fff;
}

.info h2 {
  font-size: 2rem;
  font-weight: 600;
}

.info p {
  margin-top: 0.5rem;
  font-size: 1.1rem;
  color: #666;
}

/* SPECS TABLE */
.specTable-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 25rem;
  height: 100%;
  margin: 0 auto;
  padding: 10px;
  border: solid 0.2rem white;
  border-radius: 5px;
  margin-bottom: 5%;
  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.2);
}

.specTable-row {
  display: grid;
  grid-template-columns: auto 0.2rem 1fr;
  align-items: center;
  gap: 1rem;
  width: 100%;
}

.specIcon-cell {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 10%;
  padding-left: 50%;
}

.icon {
  max-width: 5.5rem;
  height: auto;
}

.divider {
  background-color: #ffae00;
  width: 0.1rem;
  height: 100%;
  margin-left: 3rem;
}

.specText-cell {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding-left: 20%;
}

.specText-cell p {
  margin: 0;
  font-size: 1.8rem;
  color: #333;
  text-align: left;
}

/*CONFIGURE BUTTONS*/
.configure-button {
  display: inline-block;
  padding: 1.8rem 2.5rem;
  background-color: #ffae00;
  color: white;
  font-size: 1.2rem;
  font-weight: 600;
  text-align: center;
  text-decoration: none;
  border: none;
  border-radius: 5px;
  transition: background-color 0.3s ease, transform 0.3s ease;
  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.2);
  margin-top: 1rem;
}

.configure-button:hover {
  background-color: #fdbf39;
  transform: translateY(-0.2rem);
}
/*GALLERY*/
.confGallery {
  position: relative;
  width: 60%;
  margin: auto;
}
@media (max-width: 768px) {
  .confGallery {
    width: 100%;
  }
}

.gallery-img {
  display: none;
  width: 100%;
  height: auto;
}

.gallery-img.active {
  display: block;
}

.nav-button {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(255, 255, 255, 0.7);
  border: none;
  font-size: 24px;
  cursor: pointer;
  z-index: 10;
  padding: 10px;
}

.left {
  left: 10px;
}

.right {
  right: 10px;
}

/*CONFIGURATOR*/

.configurator,
.img-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2%;
  margin-left: 3%;
  margin-right: 3%;
  margin-top: 2%;
  margin-bottom: 2%;
}
@media (max-width: 1000px) {
  .configurator,
  .img-container {
    display: flex;
    flex-direction: column;
    padding: 0%;
  }
}

.confGallery,
.img-inner-container {
  width: 60%;
  position: relative;
}
@media (max-width: 1000px) {
  .confGallery,
  .img-inner-container {
    width: 100%;
  }
}
/* iFRAME */

#colorFrame {
  width: 100%;
  height: 60vh;
  border: solid 2px white;
  background-color: #63d9fd;
  border-radius: 20px;
}
#colorFrame1 {
  width: 60%;
  height: 60vh;
  border: solid 2px white;
  background-color: #63d9fd;
  border-radius: 20px;
}
@media (max-width: 1000px) {
  #colorFrame,
  #colorFrame1 {
    width: 100%;
  }
}

.confGallery img {
  width: 100%;
  height: auto;
  display: none;
}

.confGallery img.active {
  display: block;
}

.configurator-img {
  width: 100%;
  height: auto;
  display: block;
}

.confSelector {
  width: 35%;
}
@media (max-width: 1000px) {
  .confSelector {
    width: 100%;
  }
}

.confSelector ul {
  list-style-type: none;
  padding: 0;
}

.confSelector ul li {
  padding: 20px;
  font-size: 1.2rem;
  margin-bottom: 10px;
  background-color: #f4f4f4;
  border-radius: 8px;
  cursor: pointer;
  transition: background-color 0.3s;
  border: 2px solid white;
}

.confSelector ul li:hover {
  background-color: #ddd;
}

/* 2-BY-2 IN ADS */
.adHighlight {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.twoByTwo {
  width: 96%;
  display: flex;
  justify-content: center;
  gap: 10px;
  margin-right: 2%;
  margin-left: 2%;
  margin-top: 2%;
}

.twoByTwo ul {
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  gap: 10px;
}
/* ... */

